# tbca-experiments

./: .gitignore  Cargo.toml  LICENSE  README.md
python/: rag_backend.py
results/: table10_average_iterations.csv  table2_cogntive loop.txt  table3_cogntive_success.txt  table4&5_gap_resolution_results_20260317_223150.txt  table6_tps_measurements.txt  table7_scalability_results.txt  table8_kb_scalability.txt
results/gap_resolution/: gap_phase_timing.txt
results/llm_comparison/: table10_success_rates.csv  table11_iterations.csv
results/multi_domain/: table9_domain_performance.csv
src/: lib.rs
src/blockchain_benchmarks/: layer_performance.rs  mod.rs  scalability_agents.rs  scalability_knowledge.rs  storage_comparison.rs  tps_measurement.rs
src/cognitive_loop/: blockchain_timing.rs  instrumentation.rs  mod.rs  phase_timing.rs  success_rates.rs
src/error_analysis/: error_classifier.rs  failure_logger.rs  mod.rs
src/gap_resolution/: gap_classification.rs  gap_resolution_real.rs  iteration_tracking.rs  mod.rs
src/llm_comparison/: batch_evaluator.rs  batch_evaluator.rs.backup  llm_variants.rs  mod.rs  mod.rs~  python_rag.rs  rag_retriever.rs  react_engine.rs  react_rag_executor.rs  statistical_analysis.rs  task_loader.rs  tbca_executor.rs  tbca_executor_fix.txt
src/multi_domain/: domain_evaluator.rs  mod.rs  task_definitions.rs  task_generator.rs
src/sota_comparison/: ablation_study.rs  dspy_baseline.rs  mod.rs  multi_domain_benchmark.rs  overhead_profiler.rs  prospector_baseline.rs  reactree_baseline.rs  verification_metrics.rs
