[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run_experiments"
path = "src/bin/run_experiments.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
csv = "1.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
enigma-knowledge = { path = "../knowledge" }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
alloy = { workspace = true }
